2009-04-20  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix include guards.
	* include/roboptim-core/cfsqp.hh,
	* include/roboptim-core/derivable-function.hh,
	* include/roboptim-core/dummy.hh,
	* include/roboptim-core/function.hh,
	* include/roboptim-core/fwd.hh,
	* include/roboptim-core/generic-solver.hh,
	* include/roboptim-core/indent.hh,
	* include/roboptim-core/ipopt.hh,
	* include/roboptim-core/linear-function.hh,
	* include/roboptim-core/numeric-linear-function.hh,
	* include/roboptim-core/numeric-quadratic-function.hh,
	* include/roboptim-core/problem.hh,
	* include/roboptim-core/problem.hxx,
	* include/roboptim-core/quadratic-function.hh,
	* include/roboptim-core/result-with-warnings.hh,
	* include/roboptim-core/result.hh,
	* include/roboptim-core/solver-error.hh,
	* include/roboptim-core/solver-warning.hh,
	* include/roboptim-core/solver.hh,
	* include/roboptim-core/solver.hxx,
	* include/roboptim-core/twice-derivable-function.hh,
	* include/roboptim-core/util.hh,
	* include/roboptim-core/util.hxx: Fix include guards for all headers.

2009-04-20  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix pkg-config library name.
	* build-aux/pkg-config.pc.in: Here.

2009-04-19  Thomas Moulard  <thomas.moulard@gmail.com>

	Distribute build-aux/bootstrap.
	* Makefile.am: Here.

2009-04-17  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix Gentoo ebuild for release 0.1.
	* packages/ebuild/roboptim-core-0.1.ebuild: Fix package URL.

2009-04-17  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix package building mechanism.
	* build-aux/deb.mk: Fix dpkg command.
	* packages/debian/ChangeLog,
	* packages/debian/changelog: Fill ChangeLog's.
	* packages/debian/control: Fix package definition.
	* packages/debian/copyright: Add date.
	* packages/debian/rules: Make executable.
	* packages/rpm/roboptim-core.spec: Fix package definition.

2009-04-17  Thomas Moulard  <thomas.moulard@gmail.com>

	Enhance documentation generation.
	* Makefile.am: Use configure detected sed.